--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "clsx": "^2.1.0",
     "lucide-svelte": "^0.335.0",
     "mode-watcher": "^0.2.1",
+    "pocketbase": "^0.21.1",
     "svelte-sonner": "^0.3.18",
     "tailwind-merge": "^2.2.1",
     "tailwind-variants": "^0.2.0"
