--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "aos": "^2.3.4",
     "bits-ui": "^0.18.6",
     "clsx": "^2.1.0",
+    "firebase": "^10.8.1",
     "lucide-svelte": "^0.335.0",
     "mode-watcher": "^0.2.1",
+    "pocketbase": "^0.21.1",
     "svelte-sonner": "^0.3.18",
     "tailwind-merge": "^2.2.1",
     "tailwind-variants": "^0.2.0"
