--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lucide-svelte": "^0.335.0",
     "mode-watcher": "^0.2.1",
     "pocketbase": "^0.21.1",
+    "svelte-legos": "^0.2.2",
     "svelte-sonner": "^0.3.18",
     "tailwind-merge": "^2.2.1",
     "tailwind-variants": "^0.2.0",
